# dh_nonlinear_control

./: .rosinstall  CMakeLists.txt  README.md  package.xml
include/dh_nonlinear_control/: c2d.hpp
include/dh_nonlinear_control/nmpc/: multiple_shooting.hpp
src/dh_nonlinear_control/nmpc/: multiple_shooting.cpp
