<?xml version="1.0"?>
<package format="2">

	<name>dh_nonlinear_control</name>
	<version>0.0.0</version>
	<description>TODO</description>
	<maintainer email="masa0u0masa1215@gmail.com">Masayoshi Dohi</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>dh_casadi_tools</depend>

</package>
